--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,9 +3,10 @@ zookeeper_playbook_version: "0.0.2"
 version: 3.4.6
 apt_cache_timeout: 3600
 client_port: 2181
-init_limit: 5
-sync_limit: 2
+init_limit: 10
+sync_limit: 5
 tick_time: 2000
+max_client_cnxns: 0
 myid: 1
 data_dir: /var/lib/zookeeper
 log_dir: /var/log/zookeeper
