--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -1,22 +1,22 @@
 ---
-- name: Update apt cache
-  apt: update_cache=yes cache_valid_time={{apt_cache_timeout}}
-  tags: bootstrap
 
-- name: Apt install required system packages.
+- name: yum install required system packages.
   apt: pkg={{item}} state=installed
   tags: bootstrap
   with_items:
-    - zookeeper
-    - zookeeperd
+    - mesosphere-zookeeper
 
 - name: Overwrite myid file.
-  template: src=myid.j2 dest=/etc/zookeeper/conf/myid
+  template: src=myid.j2 dest=/var/lib/zookeeper/myid
   tags: deploy
 
 - name: Overwrite default config file
   template: src=zoo.cfg.j2 dest=/etc/zookeeper/conf/zoo.cfg
   notify: Restart zookeeper
+  tags: deploy
+
+- name: mkdir for zookeeper log
+  file: path=/var/log/zookeeper state=directory mode=0755
   tags: deploy
 
 - name: Start zookeeper
